[tool.poetry]
name = "todo-flask-ariadne"
version = "0.1.0"
description = "A todo API built with Flask and Ariadne"
authors = ["Alex Kiura <kiuraalex@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^2.2.5"
ariadne = "^0.12.0"
Flask-SQLAlchemy = "^2.4.4"
ipython = "^7.18.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
